# hydrate-reminder

./: .gitattributes  README.md  oauth.html  package.json  pnpm-lock.yaml
.github/workflows/: dev.yaml  release.yaml
src/: App.tsx  index.tsx  oauth.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: credits.txt
src-tauri/icons/: desktop-icon.icns
src-tauri/schema/: app.capnp
src-tauri/src/: commands.rs  google_fit.rs  http.rs  main.rs  oauth.rs  sound.rs  storage.rs
src-tauri/src/structs/: drink_point.rs  mod.rs
src-tauri/src/tasks/: notification.rs
src/components/: NotificationWarning.tsx  heatmap.tsx
src/components/icons/: warning.tsx
src/types/: DrinkHistory.ts
src/util/: datetime.ts  formatter.ts
