[package]
name = "hydrate-reminder"
version = "0.0.1"
description = "A Tauri App"
authors = ["Christopher Angelo <angelo@angeloanan.xyz>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "system-tray",
  "shell-open",
  "notification",
] }
querystring = "1"
reqwest = { version = "0.11.23", features = ["json"] }
directories = "5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
rodio = "0.17.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
