[package]
name = "hydrate-reminder"
version = "0.0.1"
description = "A Tauri App"
authors = ["Christopher Angelo <angelo@angeloanan.xyz>"]
license = ""
repository = ""
edition = "2021"

[profile.release]
# panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "system-tray",
  "shell-open",
  "notification",
] }
querystring = "1"
reqwest = { version = "0.11.23", features = ["json"] }
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
rodio = "0.17.3"
tiny_http = "0.12.0"
chrono = "0.4.33"
bincode = "1.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
