[package]
name = "hydrate-reminder"
version = "0.0.1"
description = "a smol tray app to remind you to drink"
authors = ["Christopher Angelo <angelo@angeloanan.xyz>"]
edition = "2021"
build = "build.rs"

readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/angeloanan/hydrate-reminder"
categories = ["accessibility", "visualization"]
keywords = ["hydrate", "reminder", "tauri", "app", "tray"]

[profile.release]
# panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[build-dependencies]
capnpc = "0.19.0"
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "system-tray",
  "shell-open",
  "icon-png",
  "shell-open-api",
] }
querystring = "1"
reqwest = { version = "0.11.23", features = ["json"] }
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
rodio = { version = "0.17.3", default-features = false, features = ["mp3"] }
tiny_http = "0.12.0"
chrono = "0.4.33"
capnp = "0.19.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sentry = { version = "0.32.2", features = ["tracing"] }
tracing-appender = "0.2.3"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.1"
windows = { version = "0.52.0", features = [
  "Win32_UI_Shell",
  "UI_Shell",
  "Foundation",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
